8.28 임시저장에서 불러온 데이터 정상 발송, 저장기능